--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,26 @@
     "devCommand": "expo",
     "cleanUrls": true,
     "framework": null,
+    "headers": [
+        {
+            "source": "/.well-known/apple-app-site-association",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/json"
+                }
+            ]
+        },
+        {
+            "source": "/.well-known/assetlinks.json",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/json"
+                }
+            ]
+        }
+    ],
     "rewrites": [
         {
             "source": "/:path*",
