Login is working...

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@convex-dev/auth": "^0.0.90",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@oslojs/crypto": "^1.0.1",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
