--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router",
+      ["expo-router", { "origin": "https://jpickle.win" }],
       [
         "expo-splash-screen",
         {
