Auth + redirects look like they work on ios and web

--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
       "bundler": "metro"
     },
     "plugins": [
-      ["expo-router", { "origin": "https://jpickle.win" }],
+      ["expo-router", { "origin": "https://wepickle.win" }],
       [
         "expo-splash-screen",
         {
