--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "~0.1.5",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
