--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
     "expo": "~54.0.15",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
