--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png",
+      "favicon": "./assets/images/favicon2.png",
       "bundler": "metro"
     },
     "plugins": [
