--- a/package.json
+++ b/package.json
@@ -68,5 +68,9 @@
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "private": true
 }
