--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "convex": "^1.28.0",
     "expo": "~54.0.15",
     "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-glass-effect": "~0.1.5",
     "expo-haptics": "~15.0.7",
@@ -35,6 +36,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
