--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+ignore/
+cleanup-xcode.sh
+
 # dependencies
 node_modules/
 
@@ -32,7 +35,7 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env*
 keys/
 
 # typescript
